--- a/styles.css
+++ b/styles.css
@@ -1,127 +1,147 @@
-body
-{
-  font-size: 0pt;
+@font-face {
+  font-family: 'YourCustomFont'; /* Choose a name for your font */
+  src: url('Serati.ttf') format('truetype'); /* Replace with the actual path and font format */
+  /* You can add more src lines for different font formats (woff, woff2, etc.) for better browser compatibility */
+  font-weight: normal; /* Adjust as needed (normal, bold, etc.) */
+  font-style: normal;   /* Adjust as needed (normal, italic, etc.) */
+}
+
+body {
+  font-size: 0; /* Corrected:  Setting to zero hides text.  Remove this or change */
   margin: 0;
-  padding: 0
+  padding: 0;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to the entire body */
 }
 
 .wrapper {
   background-color: rgb(61, 61, 61);
   background-size: 100%;
-  height: 1500px;
+  height: 1500px; /* Consider using min-height: 100vh */
   width: 360px;
 }
-.blockmain{
+
+.blockmain {
   height: 128px;
   width: 360px;
   display: flex;
-  overflow:scroll;
+  overflow: scroll;
 }
-.container{
-    margin-top: 22px;
-	margin-left: 22px;
-    width: 90px;
-    height: 90px;
-    position:relative; 
-	
-    
+
+.container {
+  margin-top: 22px;
+  margin-left: 22px;
+  width: 90px;
+  height: 90px;
+  position: relative;
 }
+
 .container img {
-    max-width:100%;
-    max-height:100%;
-    top:50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-	overflow:scroll;
-    position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  overflow: scroll;
+  position: absolute;
 }
-.textdiv{
+
+.textdiv {
   margin-left: 10px;
   margin-top: 21px;
   height: 100px;
   width: 260px;
 }
-.textdiv1{
+
+.textdiv1 {
   height: 50px;
   width: 240px;
 }
-.textdiv2{
+
+.textdiv2 {
   margin-top: 12px;
   height: 30px;
   width: 240px;
-}
-  .textdiv2{
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-}
-.text{
-  font-weight: bold;
-  margin-top: 7px;
-  font-size: 18px;
-}
-.text1{
   color: rgb(255, 255, 255);
   font-size: 18px;
 }
-.knopkabox{
+
+.text {
+  font-weight: bold;
+  margin-top: 7px;
+  font-size: 18px;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
+}
+
+.text1 {
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
+}
+
+.knopkabox {
   height: 80px;
   width: 360px;
   display: flex;
 }
 
-.knopka{
+.knopka {
   background-color: #3d3d3d;
   margin-left: 23px;
   height: 55px;
   width: 150px;
   border-radius: 17px;
   border: 1px solid #595959;
-  display: inline
-  text-decoration:none;
-  
+  display: inline;
+  text-decoration: none;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
 }
 
-.knopka1{
+.knopka1 {
   background-color: #3d3d3d;
   margin-left: 15px;
   height: 55px;
   width: 150px;
   border-radius: 17px;
   border: 1px solid #595959;
-  display: inline
-  text-decoration:none;
+  display: inline;
+  text-decoration: none;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
 }
-.main2{
+
+.main2 {
   background-color: #3d3d3d;
   border-top-left-radius: 35px;
   border-top-right-radius: 35px;
-  height: 1300px;
+  height: 1300px; /* Consider removing fixed height */
   width: 360px;
   display: inline-block;
-  
 }
-.png{
+
+.png {
   margin-left: 9px;
   margin-top: 9px;
   width: 340px;
   height: 140px;
   border-radius: 25px;
 }
+
 .png img {
   min-height: 140px;
   min-width: 340px;
   width: 340px;
   height: 140px;
   border-radius: 25px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
-.menu1{
+
+.menu1 {
   width: 355px;
   height: 169px;
   display: flex;
 }
-.tg{
+
+.tg {
   background-color: #3d3d3d;
   margin-left: 9px;
   margin-top: 9px;
@@ -131,13 +151,12 @@ body
   border: 1px solid #595959;
 }
 
-.donate{
+.donate {
   margin-left: 9px;
   margin-top: 9px;
   width: 160px;
   height: 160px;
   border-radius: 25px;
-  
 }
 
 .donate img {
@@ -146,10 +165,11 @@ body
   width: 160px;
   height: 160px;
   border-radius: 25px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
-.icon{
+
+.icon {
   margin-left: 20px;
   margin-top: 20px;
   width: 50px;
@@ -157,128 +177,144 @@ body
   border-radius: 15px;
   border: 1px solid rgb(20, 161, 215);
 }
-.icon img{
+
+.icon img {
   min-height: 50px;
   min-width: 50px;
   width: 50px;
   height: 50px;
   border-radius: 14px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
 
-.menu2{
+.menu2 {
   width: 355px;
   height: 145px;
   display: flex;
 }
 
-.project{
+.project {
   margin-left: 9px;
   margin-top: 9px;
   width: 160px;
   height: 160px;
   border-radius: 25px;
 }
-.project2 video{
+
+.project2 video {
   min-height: 160px;
   min-width: 160px;
   width: 160px;
   height: 160px;
   border-radius: 25px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
 
-.project2{
+.project2 {
   margin-left: 9px;
   margin-top: 9px;
   width: 160px;
   height: 160px;
   border-radius: 25px;
 }
-.project video{
+
+.project video {
   min-height: 160px;
   min-width: 160px;
   width: 160px;
   height: 160px;
   border-radius: 25px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
-.button1{
+
+.button1 {
   margin-top: 0px;
   margin-left: 0px;
   width: 120px;
   height: 40px;
   background-color: rgb(20, 161, 215);
   border-radius: 10px;
-  border:none;
+  border: none;
 }
-.text2{
+
+.text2 {
   margin-top: 10px;
   margin-left: 23px;
   color: rgb(255, 255, 255);
   font-size: 15px;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
 }
-.button{
+
+.button {
   margin-top: 5px;
   margin-left: 20px;
   width: 120px;
   height: 40px;
   background-color: rgb(20, 161, 215);
   border-radius: 10px;
-  border:none;
+  border: none;
 }
-.pd{
+
+.pd {
   margin-top: 10px;
   margin-left: 65px;
   width: 20px;
   height: 20px;
 }
-.pd img{
+
+.pd img {
   min-height: 20px;
   min-width: 20px;
   width: 20px;
   height: 20px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
-.text3{
+
+.text3 {
   margin-left: 38px;
   font-size: 15px;
   color: rgb(255, 255, 255);
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
 }
-.profile{
+
+.profile {
   margin-top: 10px;
   margin-left: 65px;
   width: 20px;
   height: 20px;
 }
-.profile img{
+
+.profile img {
   min-height: 20px;
   min-width: 20px;
   width: 20px;
   height: 20px;
-  overflow:scroll;
+  overflow: scroll;
   position: absolute;
 }
-.text4{
+
+.text4 {
   margin-left: 44px;
   font-size: 15px;
   color: rgb(255, 255, 255);
-}
-a {
-    text-decoration: none;
-	-webkit-tap-highlight-color: transparent;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
 }
 
-.prog{
-  
+a {
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.prog {
   width: 340px;
   height: 200px;
 }
-.prog{
+
+.prog {
   background-color: #3d3d3d;
   margin-top: 33px;
   margin-left: 9px;
@@ -286,23 +322,21 @@ a {
   height: 50px;
   border: 1px solid #595959;
   border-radius: 10px;
-  
 }
-.text5{
+
+.text5 {
   margin-top: 15px;
   font-size: 15px;
   color: rgb(255, 255, 255);
   text-align: center;
+  font-family: 'YourCustomFont', sans-serif; /* Apply the font to specific elements */
 }
-.prog2{
+
+.prog2 {
   background-color: #3d3d3d;
   margin-top: 28px;
   width: 330px;
   height: 50px;
   border: 1px solid #595959;
   border-radius: 10px;
-
-
-
-
-
+}
